# data-cleanup-automation-97f116

./: CONTRIBUTING.md  README.md  pyproject.toml
src/data_cleanup_automation/: __init__.py  cli.py  core.py
tests/: test_core.py
