[tool.poetry]
name = "data-cleanup-automation"
version = "0.1.0"
description = "An automation script that cleans up stale data in databases."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [{ include = "src/data_cleanup_automation" }]

[tool.poetry.dependencies]
psycopg2 = "^2.9.3"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"